--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <header class="main-header">
       <nav class="navigation">
-        <img class="header-logo" src="img/logo.svg" width="154" height="64" alt="logo Gllacy Shop">
+        <a class="header-logo"><img src="img/logo.svg" width="154" height="64" alt="logo Gllacy Shop">
+        </a>
         <ul class="navigation-list">
           <li class="navigation-list__item navigation-list__item--open"><a class="navigation-list__link" href="#">Каталог</a>
           <ul class="navigation-menu">
@@ -18,17 +19,18 @@
             <li class="navigation-menu__item"><a class="navigation-menu__link" href="#">Щербеты</a></li>
             <li class="navigation-menu__item"><a class="navigation-menu__link" href="#">Фруктовый лед</a></li>
             <li class="navigation-menu__item"><a class="navigation-menu__link" href="#">Мелорин</a></li>
-          </ul></li>
+          </ul>
+        </li>
           <li class="navigation-list__item"><a class="navigation-list__link" href="#">Доставка и оплата</a>
         </li>
         <li class="navigation-list__item"><a class="navigation-list__link" href="#">О Компании</a></li>
       </ul>
       <ul class="user-nav">
-        <li class="user-nav__list user-nav__list--search"><button class="user-nav__btn btn-search" type="button" aria-label="Кнопка поиск"></button>
+        <li class="user-nav__list user-nav__list--search"><button class="user-nav__btn btn-search" type="button" aria-label="Кнопка поиск"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17"><path fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/></svg></button>
           <form class="nav-form nav-form--search" method="get" action="https://echo.htmlacademy.ru">
             <input class="nav-input nav-input--search" type="text" name="serch" id="search-info" placeholder="Что ищем?" aria-label="Поиск">
           </form></li>
-          <li class="user-nav__list user-nav__list--login"><button class="user-nav__btn btn-login" type="button">Вход</button>
+          <li class="user-nav__list user-nav__list--login"><button class="user-nav__btn btn-login" type="button"><span class="btn-login-icon"><svg height="19" viewBox="0 0 20 19" width="20" xmlns="http://www.w3.org/2000/svg"><path d="m6.02933839 14.875v-2.916h-6.02933839v-4.917h6.02933839v-2.917l6.90250471 5.375zm11.97485281-14.875c1.0976948 0 1.9958088.9 1.9958088 2v15c0 1.1-.898114 2-1.9958088 2h-12.97275721c-1.09769484 0-1.9958088-.9-1.9958088-2v-2h1.9958088v2h12.97275721v-15h-12.97275721v2h-1.9958088v-2c0-1.1.89811396-2 1.9958088-2z" fill="#fff"/></svg></span>Вход</button>
             <form class="nav-form nav-form--login" method="post" action="https://echo.htmlacademy.ru">
               <input class="nav-input nav-input--email" type="email" name="email" placeholder="Электронная почта" aria-label="Электронная почта">
               <input class="nav-input nav-input--password" type="password" name="password" id="password-info" placeholder="Пароль" aria-label="Пароль">
@@ -36,16 +38,18 @@
               <a class="nav-login-link nav-login-link--password" href="#">Забыли пароль?</a>
               <a class="nav-login-link nav-login-link--registration" href="#">Новая регистрация</a>
             </form></li>
-            <li class="user-nav__list user-nav__list--basket"><button class="user-nav__btn">Корзина</button></li>
+            <li class="user-nav__list user-nav__list--basket"><a class="user-nav__btn btn-basket"><span class="btn-basket-icon"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20"><g fill="#FFF"><path d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"/><circle cx="6.984" cy="18" r="2"/><circle cx="15.984" cy="18" r="2"/></g></svg></span>Пусто</a>
+            </li>
           </ul>
         </nav>
+        <div class="conteiner-time">
         <div class="time-info-wrap">
-          <p class="header-time-info">С 10 до 20,ежедневно<br>
+          <p class="header-time-info">С 10 до 20,ежедневно</p>
             <span class="header-time-info__phone">8 812 450-25-25</span>
-          </p>
         </div>
+      </div>
       </header>
-      <main class="container">
+      <main class="main-part">
         <h1 class="visually-hidden">Gllacy Shop</h1>
         <div class="slider">
           <ul class="slider-list">
@@ -67,13 +71,13 @@
         <section class="offers">
           <article class="offers-item offers-item--jam">
             <h2 class="offers-item__title">Малинка даром!</h2>
-            <p class="offers-item__info">При покупке 2 кг любого фруктового мороженого,добавим в ваш заказ банку малинового варенья бесплатно.</p>
-            <a class="button button--jam" href="#">Хочу варенье!</a>
+            <p class="offers-item__info">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+            <a class="button button--offers" href="#">Хочу варенье!</a>
           </article>
           <article class="offers-item offers-item--chocolate">
             <h2 class="offers-item__title">Шоколадки даром!</h2>
-            <p class="offers-item__info">При покупке 2 кг пломбира,добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно</p>
-            <a class="button button--chocolate" href="#">Хочу шоколадки!</a>
+            <p class="offers-item__info">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно</p>
+            <a class="button button--offers" href="#">Хочу шоколадки!</a>
           </article>
         </section>
         <ul class="product">
@@ -122,21 +126,21 @@
         <div class="block">
           <article class="block-item blog">
             <h2 class="blog__title">Новое в нашем блоге</h2>
-            <a class="blog__article-link" href="#">10 способов сервировки <br>фруктовых щербетов к столу</a>
+            <a class="blog__article-link" href="#">10 способов сервировки фруктовых щербетов к столу</a>
           </article>
           <section class="block-item subscribe">
             <p class="subscribe__info">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)</p>
             <form class="subscribe-form" method="post" action="https://echo.htmlacademy.ru">
               <label class="visually-hidden" for="subscribe-email">Электронная почта</label>
               <input class="nav-input nav-input--subscribe" type="email" name="email" id="subscribe-email" placeholder="Электронная почта">
-              <button class="button" type="submit">Отправить</button>
+              <button class="button button--subscribe" type="submit">Отправить</button>
             </form>
           </section>
         </div>
       </main>
       <section class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.599104370522!2d30.320889251890595!3d59.938794181787266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+Street%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2slv!4v1528043560284" width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
-        <div class="address">
+        <div class="address visually-hidden">
           <p class="address__info">Адрес главного офиса и офлайн-магазина:<b>ул.Большая Конюшенная 19/8,Санкт-Петербург</b></p>
           <p class="address__info">Для заказов по телефону:<b>8 812 450-25-25</b>(с 10 до 20 ежедневно)</p>
           <button type="button" class="button button--feedback">Форма обратной связи</button>
@@ -144,21 +148,21 @@
       </section>
       <footer class="main-footer">
         <ul class="social-btn">
-          <li class="social-btn__item"><a class="social-btn__link social-btn__link--twitter" href="#">Твитер</a></li>
-          <li class="social-btn__item"><a class="social-btn__link social-btn__link--insta" href="#">Инстаграм</a></li>
-          <li class="social-btn__item"><a class="social-btn__link social-btn__link--fb" href="#">Фейсбук</a>
+          <li class="social-btn__item"><a class="social-btn__link social-btn__link--twitter" href="#"><span class="visually-hidden">Твитер</span></a></li>
+          <li class="social-btn__item"><a class="social-btn__link social-btn__link--insta" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
+          <li class="social-btn__item"><a class="social-btn__link social-btn__link--fb" href="#"><span class="visually-hidden">Фейсбук</span></a>
         </li>
-        <li class="social-btn__item"><a class="social-btn__link social-btn__link--vk" href="#">Вконтакте</a>
+        <li class="social-btn__item"><a class="social-btn__link social-btn__link--vk" href="#"><span class="visually-hidden">Вконтакте</span></a>
       </li>
     </ul>
     <ul class="helpful-info">
-      <li class="helpful-info__item helpful-info__item--heart"><a class="footer-link footer-link--heart" href="#">Для поставщиков</a></li>
+      <li class="helpful-info__item helpful-info__item--heart"><a class="footer-link footer-link--heart" href="#"><b>Для поставщиков</b></a></li>
       <li class="helpful-info__item"><a class="footer-link" href="#">Наши документы</a></li>
       <li class="helpful-info__item"><a class="footer-link" href="#">О производстве</a></li>
       <li class="helpful-info__item"><a class="footer-link" href="#">Экологические стандарты</a></li>
     </ul>
     <div class="footer-copyright">
-      <img class="footer-copyright__html-logo" alt="html academy" src="img/logo-htmlacademy.svg" width="110" height="39">
+      <a class="footer-link-img" href="https://htmlacademy.ru/intensive/htmlcss"><img class="footer-copyright__html-logo" alt="html academy" src="img/logo-htmlacademy.svg" width="110" height="39"></a>
       <p class="footer-copyright__made-in">Сделано в <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &copy; 2017</p>
     </div>
   </footer>
